Add teams list button.

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -3,6 +3,7 @@
     <h1>Actions</h1>
     <p>
       <%= link_to "New Team", new_team_path, class: "btn btn-default" %>
+      <%= link_to "Teams", teams_path, class: "btn btn-default" %>
     </p>
   </div>
 
