--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="well">
-    <%= link_to "Make a Pick", new_pick_path, class: "btn btn-default" %>
+    <%= link_to "Make a Pick", new_pick_path(:admin => 1), class: "btn btn-default" %>
     <%= link_to "List Picks", picks_path, class: "btn btn-default" %>
     <%= link_to "New Player", new_player_path, class: "btn btn-default" %>
   </div>
