--- a/app/assets/stylesheets/picks.css.scss
+++ b/app/assets/stylesheets/picks.css.scss
@@ -6,6 +6,7 @@
     margin-bottom: 38px;
     .form-control {
         font-size: 24px;
+        height: 48px;
     }
 
     label {
@@ -19,6 +20,7 @@
 
     .select2-container--bootstrap .select2-selection {
         font-size: 24px;
+        height: 48px;
     }
 }
 
