--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -37,7 +37,7 @@
   <%= f.label :round, "What round" %>
 
   <% if @admin %>
-  <%= select_tag(:round, options_for_select(1.upto(17).map{|r| ["Round #{r}", r]}), class: "form-control") %>
+  <%= select_tag(:round, options_for_select(1.upto(Pick::MAX_PICKS).map{|r| ["Round #{r}", r]}), class: "form-control") %>
   <% else %>
   <div id="team_rounds">
     <select class="form-control"></select>
