--- a/app/views/home/_team.html.erb
+++ b/app/views/home/_team.html.erb
@@ -13,7 +13,7 @@
 <% pick_map = {} %>
 <% team.picks.each {|pick| pick_map[pick.round] = pick} %>
 
-<% 1.upto(17) do |round| %>
+<% 1.upto(Pick::MAX_PICKS) do |round| %>
 <tr class="player-row">
 
   <% pick = pick_map[round] %>
