--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -24,13 +24,15 @@
     </div>
     <% end -%>
 
+    <h1>Player data upload</h1>
+    <p></p>
     <%= form_tag(upload_players_path, multipart: true) do %>
     <div class="form-group">
       <%= label_tag :players_csv %>
-      <%= file_field_tag :players_csv %>
+      <%= file_field_tag :players_csv, class: "btn btn-default" %>
     </div>
-    <div class="actions">
-      <%= submit_tag %>
+    <div class="form-group">
+      <%= submit_tag "Upload", class: "btn btn-primary" %>
     </div>
     <% end %>
   </div>
@@ -39,6 +41,6 @@
     <p class="bg-danger">
       <h1>DANGER!</h1>
     </p>
-    <%= link_to "Drop All Picks", drop_picks_path, method: :delete, data: { confirm: 'Are you sure you want to drop ALL picks?' }, class: "btn btn-default" %>
-    <%= link_to "Drop All Players", drop_players_path, method: :delete, data: { confirm: 'Are you sure you want to drop ALL players?' }, class: "btn btn-default" %>
+    <%= link_to "Drop All Picks", drop_picks_path, method: :delete, data: { confirm: 'Are you sure you want to drop ALL picks?' }, class: "btn btn-danger" %>
+    <%= link_to "Drop All Players", drop_players_path, method: :delete, data: { confirm: 'Are you sure you want to drop ALL players?' }, class: "btn btn-danger" %>
   </div>
