--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,13 @@
         Home
       </button>
     </a>
+    <a href="<%= admin_path %>">
+      <button type="button" class="btn btn-warning navbar-btn">
+        Admin
+      </button>
+    </a>
     <a href="<%= sessions_signout_path %>">
-      <button type="button" class="btn btn-default navbar-btn">
+      <button type="button" class="btn btn-dark navbar-btn">
         Sign Out
       </button>
     </a>
