--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -19,6 +19,7 @@
 <div class="form-group">
   <%= f.label :position %>
   <%= f.text_field :position, class: "form-control" %>
+  <i>Examples: <%= player_positions.map{|p| p[:code]}.join(", ") %></i>
 </div>
 
 <div class="form-group">
@@ -28,7 +29,7 @@
 
 <div class="form-group">
   <%= f.label :total_rank %>
-  <%= f.number_field :total_rank, class: "form-control" %>
+  <%= f.number_field :total_rank, class: "form-control", value: @next_total_rank %>
 </div>
 
 <div class="form-group">
